# gpged

./: Makefile  Pipfile  README.md  gpged.spec  pyproject.toml  setup.py
.github/workflows/: publish.yaml
gpged/: __init__.py  __main__.py  app.py  run_gpged.py  update_plist.py
gpged/images/: gnupg.icns
