[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "gpg-encrypt-decrypt-gui"
version = "0.0.1"
description = "GUI for encrypting and decrypting text with GPG."
readme = "README.md"
authors = [{name = "Sky Moore", email = "i@msky.me"}]
license = {file = "LICENSE"}
keywords = ["gpg"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
]

[project.gui-scripts]
gpged = "gpged.__main__:main"
