[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "gpged"
version = "0.0.5"
description = "GUI for encrypting and decrypting text with GPG."
readme = "README.md"
authors = [{name = "Sky Moore", email = "i@msky.me"}]
license = {file = "LICENSE"}
keywords = ["gpg","gnupg", "pgp", "gui", "encryption", "decryption", "cryptography"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
]

[project.gui-scripts]
gpged = "gpged.__main__:main"

[options]
py_modules = ["gpged"]
packages = ["gpged"]
include_package_data = true
